[gd_scene load_steps=18 format=3 uid="uid://kyprfs8b318e"]

[ext_resource type="Texture2D" uid="uid://bdgvi3sucxldl" path="res://assets/img/shade.png" id="1_3psvk"]
[ext_resource type="Script" path="res://pages/level_win_page/level_win.gd" id="1_heqyg"]
[ext_resource type="FontFile" uid="uid://d16fe7j0t7esm" path="res://assets/fonts/Orbitron/Orbitron-Bold.ttf" id="2_n5s54"]
[ext_resource type="FontFile" uid="uid://c8iep7283gdgg" path="res://assets/fonts/Orbitron/Orbitron-Regular.ttf" id="3_3c2qa"]
[ext_resource type="PackedScene" uid="uid://cvgyg8352vxmi" path="res://components/main-menu-button/main-menu-button.tscn" id="4_e0yrf"]
[ext_resource type="Texture2D" uid="uid://jr78x5snkxy5" path="res://assets/img/main_sfx/kevin_logo.svg" id="5_8cwcn"]
[ext_resource type="VideoStream" path="res://assets/video/level_win.ogv" id="7_6xlj3"]

[sub_resource type="LabelSettings" id="LabelSettings_msnd7"]
font = ExtResource("2_n5s54")
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_spygd"]
font = ExtResource("3_3c2qa")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_8kc65"]
font = ExtResource("3_3c2qa")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_3ch1a"]
font = ExtResource("2_n5s54")
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odfq3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0156863, 0.792157, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_fs1sj"]
font = ExtResource("2_n5s54")
font_size = 46
font_color = Color(0.0156863, 0.792157, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_albes"]
font = ExtResource("3_3c2qa")
font_size = 36
font_color = Color(0.0156863, 0.792157, 0, 1)

[sub_resource type="Animation" id="Animation_2ko1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18.5, 75)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/Label2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(61, 115)]
}

[sub_resource type="Animation" id="Animation_1oow0"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel/Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(18.5, 75), Vector2(18.5, 75), Vector2(18.5, 5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel/Label2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(61, 115), Vector2(61, 115), Vector2(61, 57)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r3gh0"]
_data = {
"RESET": SubResource("Animation_2ko1x"),
"fade_in": SubResource("Animation_1oow0")
}

[node name="level_win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_heqyg")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("7_6xlj3")
volume_db = -80.0
autoplay = true
expand = true

[node name="Shade" type="Sprite2D" parent="."]
position = Vector2(1502, 539)
scale = Vector2(1.56354, 1)
texture = ExtResource("1_3psvk")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 90.0
offset_right = 473.0
offset_bottom = 164.0
text = "hai vinto!"
label_settings = SubResource("LabelSettings_msnd7")
uppercase = true

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 162.0
offset_right = 968.0
offset_bottom = 210.0
text = "Congratulazioni, hai risposto a tutte le domande!"
label_settings = SubResource("LabelSettings_spygd")

[node name="TextureButton" parent="." instance=ExtResource("4_e0yrf")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 33.0
offset_top = 286.0
offset_right = 433.0
offset_bottom = 361.0
grow_horizontal = 1
grow_vertical = 1
metadata/button_text = "livello 2"

[node name="TextureButton2" parent="." instance=ExtResource("4_e0yrf")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 32.0
offset_top = -133.5
offset_right = 432.0
offset_bottom = -58.5
grow_horizontal = 1
metadata/button_text = "home"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = -135.0
offset_right = 1189.0
offset_bottom = -33.0
grow_vertical = 0
text = "cliccando sul tasto home verrai riportato al menu iniziale.
I progressi fatti verrano salvati, e potrai riprendere la partita successivamente.
Ricordati di accedere al gioco con lo stesso nome utente!"
label_settings = SubResource("LabelSettings_8kc65")

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = -185.0
offset_right = 394.0
offset_bottom = -141.0
grow_vertical = 0
text = "ATTENZIONE!"
label_settings = SubResource("LabelSettings_3ch1a")
uppercase = true

[node name="KevinLogo" type="Sprite2D" parent="."]
position = Vector2(66, 153)
scale = Vector2(0.2925, 0.2925)
texture = ExtResource("5_8cwcn")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -805.0
offset_top = -54.5
offset_right = -234.0
offset_bottom = 54.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_odfq3")

[node name="Label" type="Label" parent="Panel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 18.5
offset_top = 75.0
offset_right = 552.5
offset_bottom = 137.0
grow_horizontal = 2
text = "System Restored"
label_settings = SubResource("LabelSettings_fs1sj")
uppercase = true

[node name="Label2" type="Label" parent="Panel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 61.0
offset_top = 115.0
offset_right = 510.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 0
text = "Minaccia Neutralizzata"
label_settings = SubResource("LabelSettings_albes")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_r3gh0")
}

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_home_pressed"]
